# vuln-decompiled-summarization

./: .gitignore  README  README.md  arc_gpu_node_guide.md  environment.yml  pyproject.toml  requirements.txt
Experiments_results/: result_3Archs_100k_codellama_200_samples_arm_description.json  result_3Archs_100k_codellama_200_samples_arm_functionname_modified.json  result_3Archs_100k_codellama_200_samples_arm_identification.json  result_3Archs_100k_codellama_200_samples_x64_description.json  result_3Archs_100k_codellama_200_samples_x64_functionname_modified.json  result_3Archs_100k_codellama_200_samples_x64_identification.json  result_3Archs_100k_codellama_200_samples_x64_identification_v2.json  result_3Archs_100k_codellama_500_samples_x64_classification.json  result_X86_50k_LLAMA3_200_samples_x86_identification.json  result_X86_50k_MISTRAL_200_samples_x86_description.json  result_X86_50k_MISTRAL_200_samples_x86_functionname_modified.json  result_X86_50k_MISTRAL_200_samples_x86_identification.json  result_X86_50k_MISTRAL_500_samples_x86_classification.json  result_X86_50k_codegen2_200_samples_x86_description_mod.json  result_X86_50k_codegen2_200_samples_x86_functionname_mod.json  result_X86_50k_codegen2_200_samples_x86_identification_modified.json  result_X86_50k_codegen2_500_samples_x86_classification_modified.json  result_X86_50k_llama3_200_samples_x86_description.json  result_X86_50k_llama3_200_samples_x86_functionname_modified.json  result_X86_50k_llama3_500_samples_x86_classification.json  result_X86_50k_starcoder2_v3_200_samples_x86_description_modified.json  (+27 more)
(+27 files in other folders)
