[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your_package"
version = "1.0.0"
authors = [
  { name="Your Name", email="your.name@utsa.edu" },
]
description = "Your package description."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/SecureAIAutonomyLab/your_package"
"Bug Tracker" = "https://github.com/SecureAIAutonomyLab/your_package/issues"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [
  "src"
]
testpaths = [
    "tests"
]